--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,32 @@
 :root {
   --color-dark: #1a1a1a;
   --color-white: #ffffff;
+  --container-width: 1100px;
 
   --color-bg: var(--color-dark);
   --color-text: var(--color-white);
+}
+
+/* Portrait phones */
+@media (max-width: 575.98px) {
+}
+
+/* Land-scape phones */
+@media (max-width: 767.98px) {
+}
+
+/* Tablets */
+@media (max-width: 991.98px) {
+  :root {
+    --container-width: 700px;
+  }
+}
+
+/* Desktops */
+@media (max-width: 1199.98px) {
+  :root {
+    --container-width: 920px;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
