--- a/src/components/FAQSections/FAQSections.module.scss
+++ b/src/components/FAQSections/FAQSections.module.scss
@@ -32,27 +32,35 @@
   display: grid;
   padding-right: 5px;
   width: auto;
+  max-width: 95%;
   height: auto;
 
-  background: rgb(166, 80, 159);
-  box-shadow: 0px 4px 4px rgba(166, 80, 159, 0.25);
+  background: var(--color-accent);
+  box-shadow: 0px 4px 4px var(--color-accent);
   /* border-width: 0px, 0px, 100px, 100px;
     border-style: solid;
     border-color: #aa367c; */
-  box-shadow: 25px 20px 0px 0px #aa367c;
+  box-shadow: 25px 20px 0px 0px #a25cff;
 }
 
 .questionBox {
   display: flex;
   margin-top: 5px;
   margin-left: 5px;
-  width: 200px;
+  width: auto;
+  max-width: 325px;
   height: auto;
   flex-direction: column;
   flex-wrap: wrap;
   gap: 3px;
   background: #1b1c27;
   padding: 10px;
+
+  cursor: pointer;
+
+  &:hover {
+    background: #262835;
+  }
 }
 .questionBox p {
   text-align: left;
@@ -69,13 +77,12 @@
   margin-left: 5px;
   margin-right: 0;
   padding: 10px;
-  width: 220px;
+  width: auto;
+  max-width: 325px;
   height: auto;
   flex-direction: column;
   flex-wrap: wrap;
-  transform: scaleX(1.06);
-  transform-origin: 0% 100%;
-  background: #1b1c27;
+  background: rgba(38, 40, 53, 0.84);
 }
 
 .questionBoxElongate p {
@@ -97,11 +104,16 @@
   display: flex;
   padding: 10px;
   background: #1b1c27;
-  width: 300px;
+  width: 500px;
+  max-width: 500px;
   height: inherit;
   grid-row: 1;
   grid-column-start: 2;
   grid-column-end: 3;
+
+  @media (max-width: 900px) {
+    width: auto;
+  }
 }
 .answerBox p {
   color: white;
