--- a/src/components/FAQSections/FAQSections.module.scss
+++ b/src/components/FAQSections/FAQSections.module.scss
@@ -28,12 +28,14 @@
   background: rgba(0, 0, 0, 0.89);
   backdrop-filter: blur(3px);
 }
+
 .faqBox {
   display: grid;
   padding-right: 5px;
   width: auto;
   max-width: 95%;
   height: auto;
+  border-radius: 8px;
 
   background: var(--color-accent);
   box-shadow: 0px 4px 4px var(--color-accent);
@@ -55,22 +57,25 @@
   gap: 3px;
   background: #1b1c27;
   padding: 10px;
-
+  border-radius: 8px;
   cursor: pointer;
 
   &:hover {
     background: #262835;
   }
 }
+
 .questionBox p {
   text-align: left;
   color: white;
   font-size: 1rem;
   margin: 1px;
 }
+
 .questionBox:nth-child(n) {
   margin-bottom: 5px;
 }
+
 .questionBoxElongate {
   display: flex;
   margin-top: 5px;
@@ -83,6 +88,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   background: rgba(38, 40, 53, 0.84);
+  border-radius: 8px;
 }
 
 .questionBoxElongate p {
@@ -110,11 +116,13 @@
   grid-row: 1;
   grid-column-start: 2;
   grid-column-end: 3;
+  border-radius: 8px;
 
   @media (max-width: 900px) {
     width: auto;
   }
 }
+
 .answerBox p {
   color: white;
   text-align: left;
